syntax = "proto3";

import "insonmnia.proto";

package sonm;

enum OrderType {
    BID = 0;
    ASK = 1;
}

enum NetworkType {
    NO_NETWORK = 0;
    OUTBOUND = 1;
    INCOMING = 2;
}

// Geo represent GeoIP results for node
message Geo {
    string country = 1;
    string city = 2;
    float lat = 3;
    float lon = 4;
}

message Resources {
    uint64 cpuCores = 1;
    uint64 ramBytes = 2;
    uint64 gpuCount = 3;

    // todo: discuss
    // storage volume, in Megabytes
    uint64 storage = 4;

    uint64 netTrafficIn = 5;
    uint64 netTrafficOut = 6;
    NetworkType networkType = 7;

    map<string, string> props = 8;
}

message Bid {
    // Order ID, UUIDv4
    string id = 1;
    // Virtual computer start of life (hour grained).
    Timestamp startTime = 2;
    // Virtual computer end of life (hour grained).
    Timestamp endTime = 3;
    // Buyer’s rating. Got from Buyer’s profile for BID orders rating_supplier.
    float buyerRating = 4;
    // Supplier’s rating. Got from Supplier’s profile for ASK orders.
    float supplierRating = 5;
    // Buyer's EtherumID
    string byuerID = 6;
    // Supplier's is EtherumID
    string supplierID = 7;

    // Geo represent Worker's position
    Geo geo = 8;

    // todo: duscuss
    int64 price = 9;
    OrderType orderType = 10;

    // Hardware resources requirements
    Resources resources = 11;
}
